schema/testdata/validation_jobs_duplicate_inputs_names/schema.keel
job MyJob1 {
    inputs {
        myField Text
        myField Text
    }

    @permission(roles: [Admin])
}

role Admin {}
